--- a/Dockerfiles/Dockerfile-qcircuit
+++ b/Dockerfiles/Dockerfile-qcircuit
@@ -25,4 +25,4 @@ RUN cd /qrack/include && mkdir CL && cd /qrack && mkdir _build && cd _build && c
 RUN cd /qrack128/include && mkdir CL && cd /qrack128 && mkdir _build && cd _build && cmake -DENABLE_DEVRAND=ON -DFPPOW=6 -DUINTPOW=6 -DQBCAPPOW=12 -DENABLE_RDRAND=OFF -DENABLE_COMPLEX_X2=ON -DENABLE_OCL_MEM_GUARDS=ON .. && make -i -k -j 2 all && make install
 
 EXPOSE 22 80 8801-8811
-ENTRYPOINT /root/run-bonsai
+ENTRYPOINT /root/run-qcircuit
