--- a/Dockerfiles/Dockerfile
+++ b/Dockerfiles/Dockerfile
@@ -4,16 +4,16 @@ FROM twobombs/cudacluster:vulkan
 RUN apt-get update && apt-get -y install build-essential cmake openssh-server wget vim-common opencl-headers curl libfreetype6-dev autotools-dev libicu-dev libbz2-dev libboost-all-dev && apt-get clean all
 
 # fetch scripts and data repos
-RUN git clone https://github.com/LeventErkok/crackNum.git && git clone https://github.com/twobombs/thereminq.git && git clone https://github.com/twobombs/thereminq-bonsai.git
+RUN git clone --depth=1 https://github.com/LeventErkok/crackNum.git && git clone --depth=1 https://github.com/twobombs/thereminq.git && git clone --depth=1 https://github.com/twobombs/thereminq-bonsai.git
 
 # fetch firefly [test]
-RUN git clone https://github.com/ageller/Firefly.git && cd Firefly && pip3 install -e .
+RUN git clone --depth=1 https://github.com/ageller/Firefly.git && cd Firefly && pip3 install -e .
 
 # install bonsai
 RUN apt update && export DEBIAN_FRONTEND=noninteractive && apt install -y git cmake-curses-gui && apt clean all
 RUN apt-get update && apt-get -y install time build-essential cmake openssh-server wget vim-common opencl-headers curl libfreetype6-dev freeglut3-dev autotools-dev libicu-dev libbz2-dev libboost-all-dev && apt-get clean all
 
-RUN git clone https://github.com/twobombs/Bonsai.git
+RUN git clone --depth=1 https://github.com/twobombs/Bonsai.git
 RUN cd /Bonsai/runtime/lib && mv linux linux_temp && mv linux_fpic_glew linux
 RUN cd /Bonsai/runtime && cmake -DCMAKE_CXX_COMPILER=mpicxx -DUSE_CUB=0 -DUSE_OPENGL=1 -DCUDA_CUDART_LIBRARY=/usr/local/cuda/lib64/libcudart.so && make -i -k -j 2 && cd /Bonsai/tools/IO && make -i -k -j 2
 
