--- a/Dockerfiles/Dockerfile-graph
+++ b/Dockerfiles/Dockerfile-graph
@@ -3,4 +3,4 @@ FROM twobombs/thereminq-bonsai
 RUN cd /thereminq/buildscripts && /usr/bin/time ./10k48.sh
 
 EXPOSE 22 6080 8801-8811
-ENTRYPOINT /root/run-bonsai-qft-cosmos
+ENTRYPOINT /root/run-bonsai-graph
