--- a/Dockerfiles/Dockerfile-2204
+++ b/Dockerfiles/Dockerfile-2204
@@ -4,7 +4,8 @@ FROM twobombs/cudacluster:vulkan
 RUN apt-get update && apt-get -y install build-essential cmake openssh-server wget vim-common opencl-headers curl libfreetype6-dev autotools-dev libicu-dev libbz2-dev libboost-all-dev && apt-get clean all
 
 # fetch scripts and data repos
-RUN git clone --depth=1 https://github.com/LeventErkok/crackNum.git && git clone --depth=1 https://github.com/twobombs/thereminq.git && cd /thereminq/buildscripts && chmod 744 * && git clone --depth=1 https://github.com/twobombs/thereminq-bonsai.git && cd /thereminq-bonsai/buildscripts && chmod 744 *
+RUN git clone --depth=1 https://github.com/LeventErkok/crackNum.git && git clone --depth=1 https://github.com/twobombs/thereminq.git && cd /thereminq/buildscripts && chmod 744 * 
+RUN git clone --depth=1 https://github.com/twobombs/thereminq-bonsai.git && cd /thereminq-bonsai/buildscripts && chmod 744 *
 
 # fetch firefly [test]
 RUN git clone --depth=1 https://github.com/ageller/Firefly.git && cd Firefly && pip3 install -e .
