--- a/Dockerfiles/Dockerfile-qrack
+++ b/Dockerfiles/Dockerfile-qrack
@@ -26,3 +26,6 @@ RUN cd /qrack/include && mkdir CL && cd /var/log && mkdir qrack && cd /qrack && 
 RUN cd /qrack64/include && mkdir CL && cd /qrack64 && mkdir _build && cd _build && cmake -DENABLE_DEVRAND=ON -DFPPOW=6 -DUINTPOW=6 -DQBCAPPOW=7 -DENABLE_COMPLEX_X2=ON -DENABLE_OCL_MEM_GUARDS=ON -DENABLE_CUDA=ON .. && make -i -k -j 2 all && make install
 # BigQrack install & dependancies
 RUN cd /qrack128/include && mkdir CL && cd /qrack128 && mkdir _build && cd _build && cmake -DENABLE_DEVRAND=ON -DFPPOW=6 -DUINTPOW=6 -DQBCAPPOW=12 -DENABLE_RDRAND=OFF -DENABLE_COMPLEX_X2=ON -DENABLE_OCL_MEM_GUARDS=ON .. && make -i -k -j 2 all && make install
+#
+RUN mkdir /var/log/qrack
+#
