--- a/Dockerfiles/Dockerfile-qrack-precooked
+++ b/Dockerfiles/Dockerfile-qrack-precooked
@@ -1,6 +1,7 @@
 FROM twobombs/thereminq-bonsai
 
 RUN cd  /qrack/_build && /usr/bin/time /thereminq-bonsai/buildscripts/qrack-precooked.sh
+RUN cd /thereminq-bonsai/buildscripts && /usr/bin/time ./10k48.sh
 
 EXPOSE 22 6080 8801-8811
 ENTRYPOINT /root/run-bonsai-graph
