--- a/Dockerfiles/Dockerfile-llama
+++ b/Dockerfiles/Dockerfile-llama
@@ -1,4 +1,4 @@
-FROM FROM twobombs/thereminq-bonsai:qrack-precooked
+FROM twobombs/thereminq-bonsai:qrack-precooked
 
 # fetch dependancies
 RUN export DEBIAN_FRONTEND=noninteractive && apt update && apt install -y git python3-pip mc sudo wget libopenblas-dev libclblast-dev && apt clean all
