--- a/Dockerfiles/Dockerfile-llama
+++ b/Dockerfiles/Dockerfile-llama
@@ -1,5 +1,8 @@
 FROM twobombs/thereminq-bonsai:qrack-precooked
 
+# add clblast repo for 20.04
+RUN add-apt-repository -y ppa:cnugteren/clblast
+
 # fetch dependancies
 RUN export DEBIAN_FRONTEND=noninteractive && apt update && apt install -y git python3-pip mc sudo wget libopenblas-dev libclblast-dev && apt clean all
 
