--- a/Dockerfiles/Dockerfile-2204
+++ b/Dockerfiles/Dockerfile-2204
@@ -16,13 +16,13 @@ RUN apt-get update && apt-get -y install time build-essential cmake openssh-serv
 
 RUN git clone --depth=1 https://github.com/treecode/Bonsai.git
 RUN cd /Bonsai/runtime/lib && mv linux linux_temp && mv linux_fpic_glew linux
-RUN cd /Bonsai/runtime && cmake -DCMAKE_CXX_COMPILER=mpicxx -DUSE_CUB=0 -DUSE_OPENGL=1 -DCUDA_CUDART_LIBRARY=/usr/local/cuda/lib64/libcudart.so && make -i -k -j 2 && cd /Bonsai/tools/IO && make -i -k -j 2
+RUN cd /Bonsai/runtime && cmake -DCMAKE_CXX_COMPILER=mpicxx -DUSE_CUB=0 -DUSE_OPENGL=1 -DCUDA_CUDART_LIBRARY=/usr/local/cuda/lib64/libcudart.so && make -i -k -j $(grep -c ^processor /proc/cpuinfo) && cd /Bonsai/tools/IO && make -i -k -j $(grep -c ^processor /proc/cpuinfo)
 
 # install haskell, z3, num-utils, crackNum + dependancies
 RUN apt-get install -y z3 num-utils && apt clean all
 RUN curl -sSL https://get.haskellstack.org/ | sh
 # RUN git clone --depth=1 https://github.com/LeventErkok/crackNum.git
-RUN wget https://github.com/LeventErkok/crackNum/archive/refs/tags/v3.2.tar.gz && tar -xzvf v3.2.tar.gz && mv crackNum-3.2 crackNum
+RUN wget https://github.com/LeventErkok/crackNum/archive/refs/tags/v3.3.tar.gz && tar -xzvf v3.3.tar.gz && mv crackNum-3.3 crackNum
 RUN cd crackNum && stack path --local-bin && stack setup && stack init && stack build && stack install && stack clean && rm -R /crackNum
 
 # node run & benchmark script, make runnable 
