--- a/Dockerfiles/Dockerfile-2204
+++ b/Dockerfiles/Dockerfile-2204
@@ -1,4 +1,4 @@
-FROM twobombs/cudacluster:vulkan
+FROM nvidia/cudagl:12.4.1-devel-ubuntu22.04
 
 # install features
 RUN apt-get update && apt-get -y install build-essential cmake openssh-server wget vim-common opencl-headers curl libfreetype6-dev autotools-dev libicu-dev libbz2-dev libboost-all-dev && apt-get clean all
