--- a/Dockerfiles/Dockerfile-llama
+++ b/Dockerfiles/Dockerfile-llama
@@ -18,15 +18,8 @@ RUN cd llama-openblas && cmake . && make LLAMA_OPENBLAS=1 all
 RUN cd llama-cublas && cmake -DGGML_CUBLAS=ON . && make LLAMA_CUBLAS=1 all
 RUN cd llama-clblast && cmake -DGGML_CLBLAST=ON . && make LLAMA_CLBLAST=1 all
 
-RUN wget https://huggingface.co/TheBloke/WizardMath-7B-V1.1-GGUF/resolve/main/wizardmath-7b-v1.1.Q2_K.gguf
+RUN touch Meta-Llama3.1-8B-q3_K.gguf
 
-RUN ln -s wizardmath-7b-v1.1.Q2_K.gguf /llama.cpp/models/wizardmath-7b-v1.1.Q2_K.gguf
-RUN ln -s wizardmath-7b-v1.1.Q2_K.gguf /llama-cublas/models/wizardmath-7b-v1.1.Q2_K.gguf
-RUN ln -s wizardmath-7b-v1.1.Q2_K.gguf /llama-clblast/models/wizardmath-7b-v1.1.Q2_K.gguf
-RUN ln -s wizardmath-7b-v1.1.Q2_K.gguf /llama-openblas/models/wizardmath-7b-v1.1.Q2_K.gguf
-
-# test build
-RUN cd llama.cpp && ./main -m ../wizardmath-7b-v1.1.Q2_K.gguf -p "predict the next median using the following numbers : 10 20 30" -n 512
 
 EXPOSE 22 6080 8801-8811
 ENTRYPOINT /root/run-bonsai-graph
