--- a/Dockerfiles/Dockerfile-2204
+++ b/Dockerfiles/Dockerfile-2204
@@ -10,6 +10,14 @@ RUN git clone --depth=1 https://github.com/twobombs/thereminq-bonsai.git && cd /
 # fetch firefly [test]
 RUN git clone --depth=1 https://github.com/ageller/Firefly.git && cd Firefly && pip3 install -e .
 
+# install openmpi
+RUN apt-get install -y infiniband-diags ibverbs-utils libibverbs-dev libfabric1 libfabric-dev libpsm2-dev && apt clean all
+RUN apt-get install -y openmpi-bin openmpi-common libopenmpi-dev libgtk2.0-dev && apt clean all
+RUN apt-get install -y librdmacm-dev libpsm2-dev && apt clean all
+# openmpi benchmark
+RUN git clone https://github.com/forresti/osu-micro-benchmarks.git && cd osu-micro-benchmarks 
+## && ./configure CC=mpicc CXX=mpicxx --enable-cuda && make
+
 # install bonsai
 RUN apt update && export DEBIAN_FRONTEND=noninteractive && apt install -y git cmake-curses-gui && apt clean all
 RUN apt-get update && apt-get -y install time build-essential cmake openssh-server wget vim-common opencl-headers curl libfreetype6-dev freeglut3-dev autotools-dev libicu-dev libbz2-dev libboost-all-dev && apt-get clean all
